@@ -431,6 +431,7 @@ The zone options such as
 .BR notify ,
 .BR notify\-retry ,
 .BR provide\-xfr ,
+.BR zonestats ,
 and
 .B outgoing\-interface 
 can be given.  They are applied to the patterns and zones that include
@@ -559,6 +560,13 @@ The ip\-address is a plain IP address (IPv4 or IPv6).
 A port number can be added using a suffix of @number, for example 
 1.2.3.4@5300.
 .RE
+.TP
+.B zonestats:\fR <name>
+When compiled with --enable-zone-stats NSD can collect statistics per zone.
+This name gives the group where statistics are added to.  The groups are
+output from nsd\-control stats and stats_noreset.  Default is "".
+You can use "%s" to use the name of the zone to track its statistics.
+If not compiled in, the option can be given but is ignored.
 .TP
 .B include\-pattern:\fR <pattern\-name>
 The options from the given pattern are included at this point.
